--- a/game.project
+++ b/game.project
@@ -1,10 +1,10 @@
 [project]
-title = Busteroids
-version = 0.1
+title = Roids
+version = 1.0
 
 [bootstrap]
 main_collection = /main/main.collectionc
-render = /render/busteroids.renderc
+render = /render/roids.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
